# kanban

./: .gitignore  Cargo.toml  spec.md  x
.devcontainer/: devcontainer.json
docs/plans/: 2026-06-17-orchestration-core-m1.md  2026-06-18-orchestration-daemon-m2.md  2026-06-18-orchestration-handoff-m4.md  2026-06-18-orchestration-tui-m3.md  2026-06-19-orchestration-hooks-m5.md  2026-06-19-orchestration-polish-m6.md  2026-07-02-permission-contexts-and-activity-log.md
src/: lib.rs  main.rs
src/controller/: activity.rs  apply.rs  derive.rs  events.rs  handoff.rs  mod.rs  server.rs  store.rs
src/model/: mod.rs  proto.rs
src/tui/: app.rs  client.rs  mod.rs  run.rs  term.rs  ui.rs
