[package]
name = "kanban"
version = "0.1.0"
edition = "2021"

[lib]
name = "kanban"
path = "src/lib.rs"

[[bin]]
name = "kanban"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
time = { version = "0.3", features = ["serde-well-known", "macros", "parsing", "formatting"] }
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt", "macros", "net", "io-util", "signal", "sync", "time"] }
axum = "0.7"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
reqwest = { version = "0.12", features = ["json"] }
reqwest-eventsource = "0.6"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
